welcome.lessons.welcome.array.has271.Has271.scala.error
has271:1: error: type mismatch;
 found   : (x: Double)Double <and> (x: Float)Float <and> (x: Long)Long <and> (x: Int)Int <and> (x: Char)Int <and> (x: Short)Int <and> (x: Byte)Int <and> (x: String)String
 required: Int
def has271(nums:Array[Int]): Boolean = {for (i<-0 to nums.length-3) {if (nums(i+) == nums(i)+5 && nums(i+2) < nums(i)-1-2 && nums(i+2) > nums(i)-1+2 ) {return true}}; return false} 
                                                                               ^